syntax = "proto3";

option java_package = "com.jinproject.core";
option java_multiple_files = true;

message TimerPreferences {
  int32 interval_first_timer_setting = 1;
  int32 interval_second_timer_setting = 2;
  repeated string frequently_used_boss_list = 3;
  int32 font_size = 4;
  int32 x_pos = 5;
  int32 y_pos = 6;
  repeated string overlay_boss_list = 7;
}